NCC/containers/Container1/error.txt
code.cpp:1:6: error: expected constructor, destructor, or type conversion before ‘(’ token
    1 | print(int(input())+20)
      |      ^
